--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Starter Template
-author: Panoramedia
+title: Tripureswari Marbles
+author: yashLadha
 email: panoramedia@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  A Site Starter Materialize Templates for Jekyll
+  Tripureswari Marbles and Granites
 
 twitter_username: macrod68
 github_username:  macrod68
